ssl-ingress/nginx-internal-ingress-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-internal-ingress
  namespace: kube-ingress
  labels:
    k8s-addon: nginx-ingress.addons.k8s.io
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: 'http'
    dns.alpha.kubernetes.io/external: ${INTERNAL_LB_DNS_NAME}
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: ${ACM_CERT_ARN}
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
spec:
  type: LoadBalancer
  selector:
    app: nginx-internal-ingress
  ports:
    - name: https
      port: 443
      targetPort: http
